// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`{{escape}} 1`] = `
<div>
  I am {name}
</div>
`;

exports[`Empty {} 1`] = `
<div>
  {}
</div>
`;

exports[`If not match 1`] = `
<div>
  I am 
  not match
  
</div>
`;

exports[`Insert React element and click event 1`] = `
<div>
  
  <span
    onClick={[Function]}
  >
    Patronus
  </span>
   Charm
</div>
`;

exports[`Multi {} 1`] = `
<div>
  
  Alice
   
  13
   {}
</div>
`;

exports[`Multi Empty {} 1`] = `
<div>
  {} {} 
  Alice
  
</div>
`;

exports[`With React element 1`] = `
<div>
  
  <a
    href="https://www.google.com/search?q=Harry Potter"
  >
    Harry Potter
  </a>
   is a series of 
  fantasy
   novels written by British {author} 
  J. K. Rowling
   in 
  1997
  .
</div>
`;
